--- a/Lab5/package.json
+++ b/Lab5/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "lab4",
+  "name": "lab5",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,7 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
-    "mongoose": "^8.18.0",
+    "mongoose": "^8.18.1",
     "nodemon": "^3.1.10"
   }
 }
